Changed the layout to be responsive, using primeflex. Fixed number boxes' sizing. Fixed e2e test for new login page design. Fixed user dropdown labels in order to be more readable.

--- a/src/app/components/game-panel/game-panel.component.scss
+++ b/src/app/components/game-panel/game-panel.component.scss
@@ -75,4 +75,5 @@
   align-items: center;
   color: #df0026;
   border: solid 1px #df0026;
+  box-sizing: content-box;
 }
