--- a/src/app/components/game/game.component.scss
+++ b/src/app/components/game/game.component.scss
@@ -1,22 +1,9 @@
 #game-container {
-  width: 904px;
-}
-
-#game-panels-container {
-  display: flex;
-  flex-wrap: nowrap;
+  max-width: 904px;
 }
 
 app-game-panel {
-  margin-right: 16px;
-  &:last-child {
-    margin-right: 0;
-  }
-}
-
-#play-button-container {
-  display: flex;
-  justify-content: center;
+  min-width: 214px;
 }
 
 #play-button {
@@ -30,4 +17,8 @@ app-game-panel {
   color: white;
   background-color: #df0026;
   margin-top: 24px;
+}
+
+#logout-button {
+  margin-bottom: 8px;
 }
